# VitalMile

./: Cargo.toml
src/: lib.rs  main.rs
src/api/: mod.rs  router.rs  runsessionapi.rs
src/domain/: dailywellness.rs  lapsplits.rs  mod.rs  runsession.rs  trainingmarkers.rs
src/domain /: dailywellness.rs  lapsplits.rs  runsession.rs  trainingmarkers.Rs
src/infrastructure/: createtables.rs  dbconnector.rs  loadsampledata.rs  mod.rs
src/infrastructure/sampledata/: dailywellness.csv  lapsplits.csv  runsession.csv  trainingmarkers.csv
