[package]
name = "vitalMile"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.7.1"
chrono = { version = "0.4.31", features = ["serde"] }
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
tokio = { version = "1.34.0", features = ["full"] }
tower-http = { version = "0.5.0", features = ["cors"] }
uuid = "1.3.1"